feat(refactoring): introspection handler changes
